# COOP-STAT

./: .gitignore  README.md  pyproject.toml  setup.py
src/coop_stat/: __init__.py  tags.py  topology.py
src/coop_stat/cli/: calc_ovl.py  compare.py  compare_v1.py  make_hist.py
src/coop_stat/compare/: extraction.py  output.py  statistics.py
src/coop_stat/histogram/: builder.py  indexing.py  sanity.py
src/coop_stat/io/: gro.py  h5.py  pdb.py
src/coop_stat/ovl/: __init__.py  aggregation.py  core.py
src/dimer_ovl/: __init__.py  config.py  topology.py
src/dimer_ovl/cli/: __init__.py  calc_ovl.py  compare.py  compare_v1.py  make_hist.py
src/dimer_ovl/compare/: __init__.py  extraction.py  output.py  statistics.py
src/dimer_ovl/histogram/: __init__.py  builder.py  indexing.py  sanity.py
src/dimer_ovl/io/: h5.py  pdb.py
src/dimer_ovl/ovl/: aggregation.py  core.py
tests/: conftest.py  test_tags.py  test_topology.py
tests/test_compare/: test_extraction.py
tests/test_histogram/: test_indexing.py
tests/test_ovl/: test_core.py
