[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dimer-ovl"
version = "0.1.0"
description = "OVL-based statistical comparison of symmetric homodimer MD simulations"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "h5py>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "hypothesis",
]

[project.scripts]
dimer-hist = "dimer_ovl.cli.make_hist:main"
dimer-ovl = "dimer_ovl.cli.calc_ovl:main"
dimer-compare = "dimer_ovl.cli.compare:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
