[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coop_stat"
version = "0.1.0"
description = "OVL-based 2-Sample KS statistical comparison of symmetric homodimer MD simulations"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "h5py>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "hypothesis",
]

[project.scripts]
dimer-hist = "coop_stat.cli.make_hist:main"
dimer-ovl = "coop_stat.cli.calc_ovl:main"
dimer-compare = "coop_stat.cli.compare:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
